# HDC1080

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  ctest.yml
Examples/: README.md
Examples/STM32/Inc/: HDC1080_I2C.hpp
Examples/STM32/Src/: HDC1080_I2C.cpp
Inc/: HDC1080.hpp
Src/: HDC1080.cpp
Test/: HDC1080.test.cpp
